--- a/sistemacafeteria/web/WEB-INF/jsp/ventas.css
+++ b/sistemacafeteria/web/WEB-INF/jsp/ventas.css
@@ -1,4 +1,4 @@
-.contenido-principal-ventas {
+.contenido-principal {
     margin-left: 220px;
     padding: 20px;
     background-color: #97b3b0;
@@ -117,32 +117,6 @@ h1 {
     background-color: #0056b3;
 }
 
-/* Contenedor para el campo de búsqueda con ícono */
-.campo-lupa {
-    display: flex;
-    align-items: center;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    background-color: #fff;
-    padding: 5px 10px;
-    flex: 1;
-    margin-right: 10px;
-}
-
-.campo-lupa i {
-    color: #aaa;
-    font-size: 1rem;
-    margin-right: 8px;
-}
-
-.campo-lupa input {
-    border: none;
-    outline: none;
-    width: 100%;
-    font-size: 1rem;
-    background-color: transparent;
-}
-
 
 table {
     width: 100%;
@@ -202,3 +176,64 @@ td a:hover {
 .boton.registrar-compra {
     background-color: #ffc107;
 }
+
+
+
+/* Contenedor para el campo de búsqueda con ícono */
+.campo-lupa {
+    display: flex;
+    align-items: center;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #fff;
+    padding: 8.3px 10px;
+    flex: 1;
+    margin-right: 0;
+    margin-bottom: 10px;
+}
+
+.campo-lupa i {
+    color: #aaa;
+    font-size: 1rem;
+    margin-right: 8px;
+}
+
+.campo-lupa input {
+    border: none;
+    outline: none;
+    width: 100%;
+    font-size: 1rem;
+    background-color: transparent;
+}
+
+.resumen {
+    display: flex;
+    gap: 20px;
+    margin-top: 300px;
+    margin-bottom: 0px;
+    padding-top: 20px;
+    color: #333;
+    border-top : 2px solid #333;
+}
+
+
+.tarjeta-resumen {
+    flex: 1;
+    background-color: #e8e9eb;
+    padding: 20px;
+    border-radius: 12px;
+    text-align: left;
+    position: relative;
+}
+
+.tarjeta-resumen::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 20px;
+    width: 100%;
+    background-color: #333;
+    border-radius: 0 0 8px 8px;
+}
+
