--- a/sistemacafeteria/web/WEB-INF/vistas/style.css
+++ b/sistemacafeteria/web/WEB-INF/vistas/style.css
@@ -31,7 +31,7 @@ p {
 }
 
 body {
-    background-color: #E0DCAA;
+    background-color: #F2F4F8;
     /* Color de fondo más suave */
     display: flex;
     align-items: center;
@@ -40,8 +40,10 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+
+
 .login-container {
-    background-color: #fff;
+    background-color: #f7f7f7;
     /* Blanco suave */
     border-radius: 20px;
     width: 100%;
@@ -49,6 +51,31 @@ body {
     align-content: center;
     padding: 80px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.logo-container{
+    display: inline-block; 
+    align-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 10px;    
+}
+
+.login-container .logo {
+    font-family: 'Radley', serif;
+    font-weight: 700px;
+    font-size:48px;
+    line-height: 0.6;
+    text-align: center;
+    color: #290102;
+}
+
+.login-container .sublogo{
+    font-family: 'Radley', serif;
+    font-style: italic;
+    font-weight: 400px;
+    font-size:24px;
+    text-align: center;
+    color: #290102;
 }
 
 .login-container h1 {
